fix(HeroSlider): 🐛 fixed position of moto text and ribbon on mobile

--- a/src/components/LinkRibbons/link-ribbons.module.scss
+++ b/src/components/LinkRibbons/link-ribbons.module.scss
@@ -1,13 +1,23 @@
+@import "../../styles/utils/breakpoints.scss";
+
 .link-ribbon-container {
   position: absolute;
-  bottom: 10%;
+  top: 2.5%;
   left: -75px;
+  @include breakpoint(sm) {
+    top: unset;
+    bottom: 10%;
+    left: -75px;
+  }
   list-style: none;
   padding: 0;
   margin: 0;
   z-index: 2;
   li {
-    transform: rotate(-45deg);
+    transform: rotate(0deg);
+    @include breakpoint(sm) {
+      transform: rotate(-45deg);
+    }
     margin-top: 100px;
     transition: 0.3s;
     max-width: 320px;
@@ -15,7 +25,10 @@
   }
   .link-styled-container {
     background: #f04d23;
-    padding: 30px 20px 30px 40px;
+    padding: 20px 0px 20px 40px;
+    @include breakpoint(sm) {
+      padding: 30px 20px 30px 40px;
+    }
   }
   a {
     text-decoration: none;
