--- a/src/components/MotoText/moto-text.module.scss
+++ b/src/components/MotoText/moto-text.module.scss
@@ -17,12 +17,11 @@
 .moto-text-container {
   position: absolute;
   left: 50%;
-  bottom: 50%;
+  bottom: 5%;
   transform: translate(-50%, -50%);
   z-index: 1;
   width: 80%;
   @include breakpoint(sm) {
-    bottom: 5%;
     width: auto;
     min-width: 65vw;
   }
